syntax = "proto3";

package Proto.Notification.Note;

service NotificationService {
  rpc SendNoteCreated(NoteCreatedNotificationProto) returns (NotificationResponse);
  rpc SendNoteUpdated(NoteUpdatedNotificationProto) returns (NotificationResponse);
}

message NoteCreatedNotificationProto {
  string noteId = 1;
  string text = 2;
  string noteTypeId = 3;
  string timeSlotId = 4;
  string timeStamp = 5; // ISO 8601
}

message NoteUpdatedNotificationProto {
  string noteId = 1;
  string text = 2;
  string noteTypeId = 3;
  string timeSlotId = 4;
}

message NotificationResponse {
  bool success = 1;
}
